fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ h2 {
   font-size: 40px;
 }
 
+.width {
+  min-width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .h2-2 {
   font-size: 60px;
 }
